--- a/console/src/styles/toast.scss
+++ b/console/src/styles/toast.scss
@@ -12,7 +12,13 @@
   //   }
 
   .data-e2e-failure {
-    color: $warn-color !important;
-    background-color: mat.get-color-from-palette($background, cards) !important;
+    .mdc-snackbar__surface {
+      background-color: mat.get-color-from-palette($background, toast) !important;
+      color: $warn-color !important;
+
+      * {
+        color: $warn-color !important;
+      }
+    }
   }
 }
